fix: custom scrollbar in ui and playground (#587)

--- a/studio/src/styles/globals.css
+++ b/studio/src/styles/globals.css
@@ -123,7 +123,7 @@
 
 @layer utilities {
   .scrollbar-custom {
-    @apply transition-colors scrollbar-thin scrollbar-thumb-stone-300 scrollbar-thumb-rounded-md hover:scrollbar-thumb-stone-400 dark:scrollbar-thumb-secondary dark:hover:scrollbar-thumb-muted;
+    @apply transition-colors scrollbar-thin scrollbar-thumb-stone-300 scrollbar-thumb-rounded-md hover:scrollbar-thumb-stone-400 dark:scrollbar-thumb-secondary/80 dark:hover:scrollbar-thumb-muted;
   }
 }
 
@@ -137,9 +137,9 @@
   .table-action {
     @apply border border-transparent group-hover:border group-hover:border-border group-hover:bg-background data-[state=open]:border data-[state=open]:border-border data-[state=open]:bg-background group-hover:hover:bg-accent/50;
   }
-  input[type='number']::-webkit-outer-spin-button,
-  input[type='number']::-webkit-inner-spin-button,
-  input[type='number'] {
+  input[type="number"]::-webkit-outer-spin-button,
+  input[type="number"]::-webkit-inner-spin-button,
+  input[type="number"] {
     -webkit-appearance: none;
     margin: 0;
     -moz-appearance: textfield !important;
